add: background to welcome-section and changes the secondary color

--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -51,11 +51,11 @@ h6 {
 }
 
 .color-secondary {
-  color: #7D6B7D;
+  color: #2157B8;
 }
 
 .secondary {
-  background: #7D6B7D;
+  background: #2157B8;
 }
 
 .color-main {
@@ -1984,11 +1984,13 @@ footer {
   top: 0;
   left: 0;
   z-index: 10;
+  margin-bottom: 10em;
 }
 
 main {
-  margin-top: 10em;
   overflow: hidden;
+  position: relative;
+  margin-top: 10em;
 }
 
 .main-section {
@@ -1998,6 +2000,10 @@ main {
 
 #welcome-section {
   height: 100vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(currentColor), to(transparent)), url("../img/projects/office_v3.png") no-repeat left top;
+  background: linear-gradient(currentColor, transparent), url("../img/projects/office_v3.png") no-repeat left top;
+  background-position: left top;
+  background-size: 100%, 140%;
 }
 
 .project-gallery {
