--- a/personalPortfolio/css/index/_challenge.sass
+++ b/personalPortfolio/css/index/_challenge.sass
@@ -3,10 +3,12 @@
     top: 0
     left: 0
     z-index: 10
+    margin-bottom: 10em
 
 main
-    margin-top: 10em
     overflow: hidden
+    position: relative
+    margin-top: 10em
 
 .main-section
     min-height: 100vh
@@ -14,6 +16,9 @@ main
 
 #welcome-section
     height: 100vh
+    background: linear-gradient(currentColor, transparent), url('../img/projects/office_v3.png') no-repeat left top
+    background-position: left top
+    background-size: 100%, 140%
 
 .project-gallery
     display: grid
