--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -753,507 +753,507 @@ a.button, a.button:before, #nav-menu-opener, .icon {
 }
 
 .ma0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .ma2 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .ma4 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .ma6 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .ma8 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .ma10 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .ma12 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .ma14 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .ma16 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .mx0 {
-  margin: 0 0rem;
+  margin: 0 0rem !important;
 }
 
 .mx2 {
-  margin: 0 0.5rem;
+  margin: 0 0.5rem !important;
 }
 
 .mx4 {
-  margin: 0 1rem;
+  margin: 0 1rem !important;
 }
 
 .mx6 {
-  margin: 0 1.5rem;
+  margin: 0 1.5rem !important;
 }
 
 .mx8 {
-  margin: 0 2rem;
+  margin: 0 2rem !important;
 }
 
 .mx10 {
-  margin: 0 2.5rem;
+  margin: 0 2.5rem !important;
 }
 
 .mx12 {
-  margin: 0 3rem;
+  margin: 0 3rem !important;
 }
 
 .mx14 {
-  margin: 0 3.5rem;
+  margin: 0 3.5rem !important;
 }
 
 .mx16 {
-  margin: 0 4rem;
+  margin: 0 4rem !important;
 }
 
 .my0 {
-  margin: 0rem 0;
+  margin: 0rem 0 !important;
 }
 
 .my2 {
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 !important;
 }
 
 .my4 {
-  margin: 1rem 0;
+  margin: 1rem 0 !important;
 }
 
 .my6 {
-  margin: 1.5rem 0;
+  margin: 1.5rem 0 !important;
 }
 
 .my8 {
-  margin: 2rem 0;
+  margin: 2rem 0 !important;
 }
 
 .my10 {
-  margin: 2.5rem 0;
+  margin: 2.5rem 0 !important;
 }
 
 .my12 {
-  margin: 3rem 0;
+  margin: 3rem 0 !important;
 }
 
 .my14 {
-  margin: 3.5rem 0;
+  margin: 3.5rem 0 !important;
 }
 
 .my16 {
-  margin: 4rem 0;
+  margin: 4rem 0 !important;
 }
 
 .mt0 {
-  margin-top: 0rem;
+  margin-top: 0rem !important;
 }
 
 .mt2 {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
 
 .mt4 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 
 .mt6 {
-  margin-top: 1.5rem;
+  margin-top: 1.5rem !important;
 }
 
 .mt8 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 
 .mt10 {
-  margin-top: 2.5rem;
+  margin-top: 2.5rem !important;
 }
 
 .mt12 {
-  margin-top: 3rem;
+  margin-top: 3rem !important;
 }
 
 .mt14 {
-  margin-top: 3.5rem;
+  margin-top: 3.5rem !important;
 }
 
 .mt16 {
-  margin-top: 4rem;
+  margin-top: 4rem !important;
 }
 
 .mr0 {
-  margin-right: 0rem;
+  margin-right: 0rem !important;
 }
 
 .mr2 {
-  margin-right: 0.5rem;
+  margin-right: 0.5rem !important;
 }
 
 .mr4 {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
 
 .mr6 {
-  margin-right: 1.5rem;
+  margin-right: 1.5rem !important;
 }
 
 .mr8 {
-  margin-right: 2rem;
+  margin-right: 2rem !important;
 }
 
 .mr10 {
-  margin-right: 2.5rem;
+  margin-right: 2.5rem !important;
 }
 
 .mr12 {
-  margin-right: 3rem;
+  margin-right: 3rem !important;
 }
 
 .mr14 {
-  margin-right: 3.5rem;
+  margin-right: 3.5rem !important;
 }
 
 .mr16 {
-  margin-right: 4rem;
+  margin-right: 4rem !important;
 }
 
 .mb0 {
-  margin-bottom: 0rem;
+  margin-bottom: 0rem !important;
 }
 
 .mb2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem !important;
 }
 
 .mb4 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
 }
 
 .mb6 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 
 .mb8 {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
 
 .mb10 {
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.5rem !important;
 }
 
 .mb12 {
-  margin-bottom: 3rem;
+  margin-bottom: 3rem !important;
 }
 
 .mb14 {
-  margin-bottom: 3.5rem;
+  margin-bottom: 3.5rem !important;
 }
 
 .mb16 {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .ml0 {
-  margin-left: 0rem;
+  margin-left: 0rem !important;
 }
 
 .ml2 {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
 }
 
 .ml4 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 
 .ml6 {
-  margin-left: 1.5rem;
+  margin-left: 1.5rem !important;
 }
 
 .ml8 {
-  margin-left: 2rem;
+  margin-left: 2rem !important;
 }
 
 .ml10 {
-  margin-left: 2.5rem;
+  margin-left: 2.5rem !important;
 }
 
 .ml12 {
-  margin-left: 3rem;
+  margin-left: 3rem !important;
 }
 
 .ml14 {
-  margin-left: 3.5rem;
+  margin-left: 3.5rem !important;
 }
 
 .ml16 {
-  margin-left: 4rem;
+  margin-left: 4rem !important;
 }
 
 .pa0 {
-  padding: 0rem;
+  padding: 0rem !important;
 }
 
 .pa2 {
-  padding: 0.5rem;
+  padding: 0.5rem !important;
 }
 
 .pa4 {
-  padding: 1rem;
+  padding: 1rem !important;
 }
 
 .pa6 {
-  padding: 1.5rem;
+  padding: 1.5rem !important;
 }
 
 .pa8 {
-  padding: 2rem;
+  padding: 2rem !important;
 }
 
 .pa10 {
-  padding: 2.5rem;
+  padding: 2.5rem !important;
 }
 
 .pa12 {
-  padding: 3rem;
+  padding: 3rem !important;
 }
 
 .pa14 {
-  padding: 3.5rem;
+  padding: 3.5rem !important;
 }
 
 .pa16 {
-  padding: 4rem;
+  padding: 4rem !important;
 }
 
 .px0 {
-  padding: 0 0rem;
+  padding: 0 0rem !important;
 }
 
 .px2 {
-  padding: 0 0.5rem;
+  padding: 0 0.5rem !important;
 }
 
 .px4 {
-  padding: 0 1rem;
+  padding: 0 1rem !important;
 }
 
 .px6 {
-  padding: 0 1.5rem;
+  padding: 0 1.5rem !important;
 }
 
 .px8 {
-  padding: 0 2rem;
+  padding: 0 2rem !important;
 }
 
 .px10 {
-  padding: 0 2.5rem;
+  padding: 0 2.5rem !important;
 }
 
 .px12 {
-  padding: 0 3rem;
+  padding: 0 3rem !important;
 }
 
 .px14 {
-  padding: 0 3.5rem;
+  padding: 0 3.5rem !important;
 }
 
 .px16 {
-  padding: 0 4rem;
+  padding: 0 4rem !important;
 }
 
 .py0 {
-  padding: 0rem 0;
+  padding: 0rem 0 !important;
 }
 
 .py2 {
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 !important;
 }
 
 .py4 {
-  padding: 1rem 0;
+  padding: 1rem 0 !important;
 }
 
 .py6 {
-  padding: 1.5rem 0;
+  padding: 1.5rem 0 !important;
 }
 
 .py8 {
-  padding: 2rem 0;
+  padding: 2rem 0 !important;
 }
 
 .py10 {
-  padding: 2.5rem 0;
+  padding: 2.5rem 0 !important;
 }
 
 .py12 {
-  padding: 3rem 0;
+  padding: 3rem 0 !important;
 }
 
 .py14 {
-  padding: 3.5rem 0;
+  padding: 3.5rem 0 !important;
 }
 
 .py16 {
-  padding: 4rem 0;
+  padding: 4rem 0 !important;
 }
 
 .pt0 {
-  padding-top: 0rem;
+  padding-top: 0rem !important;
 }
 
 .pt2 {
-  padding-top: 0.5rem;
+  padding-top: 0.5rem !important;
 }
 
 .pt4 {
-  padding-top: 1rem;
+  padding-top: 1rem !important;
 }
 
 .pt6 {
-  padding-top: 1.5rem;
+  padding-top: 1.5rem !important;
 }
 
 .pt8 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 
 .pt10 {
-  padding-top: 2.5rem;
+  padding-top: 2.5rem !important;
 }
 
 .pt12 {
-  padding-top: 3rem;
+  padding-top: 3rem !important;
 }
 
 .pt14 {
-  padding-top: 3.5rem;
+  padding-top: 3.5rem !important;
 }
 
 .pt16 {
-  padding-top: 4rem;
+  padding-top: 4rem !important;
 }
 
 .pr0 {
-  padding-right: 0rem;
+  padding-right: 0rem !important;
 }
 
 .pr2 {
-  padding-right: 0.5rem;
+  padding-right: 0.5rem !important;
 }
 
 .pr4 {
-  padding-right: 1rem;
+  padding-right: 1rem !important;
 }
 
 .pr6 {
-  padding-right: 1.5rem;
+  padding-right: 1.5rem !important;
 }
 
 .pr8 {
-  padding-right: 2rem;
+  padding-right: 2rem !important;
 }
 
 .pr10 {
-  padding-right: 2.5rem;
+  padding-right: 2.5rem !important;
 }
 
 .pr12 {
-  padding-right: 3rem;
+  padding-right: 3rem !important;
 }
 
 .pr14 {
-  padding-right: 3.5rem;
+  padding-right: 3.5rem !important;
 }
 
 .pr16 {
-  padding-right: 4rem;
+  padding-right: 4rem !important;
 }
 
 .pb0 {
-  padding-bottom: 0rem;
+  padding-bottom: 0rem !important;
 }
 
 .pb2 {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.5rem !important;
 }
 
 .pb4 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem !important;
 }
 
 .pb6 {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem !important;
 }
 
 .pb8 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
 }
 
 .pb10 {
-  padding-bottom: 2.5rem;
+  padding-bottom: 2.5rem !important;
 }
 
 .pb12 {
-  padding-bottom: 3rem;
+  padding-bottom: 3rem !important;
 }
 
 .pb14 {
-  padding-bottom: 3.5rem;
+  padding-bottom: 3.5rem !important;
 }
 
 .pb16 {
-  padding-bottom: 4rem;
+  padding-bottom: 4rem !important;
 }
 
 .pl0 {
-  padding-left: 0rem;
+  padding-left: 0rem !important;
 }
 
 .pl2 {
-  padding-left: 0.5rem;
+  padding-left: 0.5rem !important;
 }
 
 .pl4 {
-  padding-left: 1rem;
+  padding-left: 1rem !important;
 }
 
 .pl6 {
-  padding-left: 1.5rem;
+  padding-left: 1.5rem !important;
 }
 
 .pl8 {
-  padding-left: 2rem;
+  padding-left: 2rem !important;
 }
 
 .pl10 {
-  padding-left: 2.5rem;
+  padding-left: 2.5rem !important;
 }
 
 .pl12 {
-  padding-left: 3rem;
+  padding-left: 3rem !important;
 }
 
 .pl14 {
-  padding-left: 3.5rem;
+  padding-left: 3.5rem !important;
 }
 
 .pl16 {
-  padding-left: 4rem;
+  padding-left: 4rem !important;
 }
 
 @media screen and (min-width: 0px) {
@@ -1984,26 +1984,60 @@ footer {
   top: 0;
   left: 0;
   z-index: 10;
-  margin-bottom: 10em;
 }
 
 main {
-  overflow: hidden;
-  position: relative;
   margin-top: 10em;
+  overflow: hidden;
 }
 
 .main-section {
   min-height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 #welcome-section {
-  height: 100vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(currentColor), to(transparent)), url("../img/projects/office_v3.png") no-repeat left top;
-  background: linear-gradient(currentColor, transparent), url("../img/projects/office_v3.png") no-repeat left top;
+  height: 100;
+  background: url("../img/projects/office_v3.png");
+  background-size: 140%;
   background-position: left top;
-  background-size: 100%, 140%;
+  background-repeat: no-repeat;
+}
+
+.svg-background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.svg-background svg path {
+  fill: currentColor !important;
+}
+
+section#welcome-section {
+  position: relative;
+}
+
+section#welcome-section *:not(.svg-background) {
+  z-index: 1;
+}
+
+@media (max-width: 960px) {
+  #welcome-section > div {
+    margin-top: 14em !important;
+  }
+  #welcome-section .svg-background {
+    display: none;
+  }
+}
+
+.dark .dark-special {
+  background-color: inherit;
+  padding: 1em;
 }
 
 .project-gallery {
