--- a/personalPortfolio/css/index/_challenge.sass
+++ b/personalPortfolio/css/index/_challenge.sass
@@ -3,22 +3,50 @@
     top: 0
     left: 0
     z-index: 10
-    margin-bottom: 10em
 
 main
-    overflow: hidden
-    position: relative
     margin-top: 10em
+    overflow: hidden
 
 .main-section
     min-height: 100vh
     width: 100%
+    overflow: hidden
 
 #welcome-section
-    height: 100vh
-    background: linear-gradient(currentColor, transparent), url('../img/projects/office_v3.png') no-repeat left top
+    height: 100
+    background: url('../img/projects/office_v3.png')
+    background-size: 140%
     background-position: left top
-    background-size: 100%, 140%
+    background-repeat: no-repeat
+
+.svg-background 
+	position: absolute 
+	left: 0 
+	top: 0 
+	width: 100% 
+	height: 100% 
+	z-index: 0 
+	svg 
+		path 
+			fill: currentColor!important 
+
+section#welcome-section 
+	position: relative 
+	*:not(.svg-background) 
+		z-index: 1 
+
+@media (max-width: map-get($media-breakpoints-sizes, md))
+    #welcome-section 
+        & > div
+            margin-top: 14em!important
+        .svg-background
+            display: none
+
+    
+.dark .dark-special
+    background-color: inherit//map-get($dark, main)
+    padding: 1em
 
 .project-gallery
     display: grid
