--- a/personalPortfolio/css/_functions.sass
+++ b/personalPortfolio/css/_functions.sass
@@ -10,3 +10,8 @@
         $key: "#{$base-name-for-keys}#{$item}"
         $map: map-merge($map, ($key: $value)) 
     @return $map
+
+@function strip-unit($number)
+  @if type-of($number) == 'number' and not unitless($number)
+    @return $number / ($number * 0 + 1)
+  @return $number
