--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -4,9 +4,11 @@
 
 html
     font-size: $html-font-size
+    @media (min-width: map-get($media-breakpoints-sizes, xl))
+        font-size: $html-font-size * 2
 
 body
-    font-family: 'Lato', sans-serif
+    font-family: 'Quicksand', sans-serif
     font-weight: normal
     // overflow-x: hidden
 
