--- a/personalPortfolio/css/_theme.sass
+++ b/personalPortfolio/css/_theme.sass
@@ -1,7 +1,7 @@
 /* Color Theme Swatches in Hex */
-$accent: #FFF587
-$primary: #FF8365
-$secondary: #2157B8
+$accent: #ECEC00
+$primary: #FF2121
+$secondary: #0046AA
 
 /* Color Theme Swatches in RGBA */
 // $accent: rgba(77,54,40, 1)
