--- a/personalPortfolio/css/index.sass
+++ b/personalPortfolio/css/index.sass
@@ -21,7 +21,7 @@
 
 @import 'layout'
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700')
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,700')
 @import 'material_design_icons'
 
-@import 'index/challenge'
+@import 'challenge/index'
