--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -176,7 +176,7 @@ hr {
   border-style: solid;
 }
 
-a.button, a.button:before, #nav-menu-opener, .icon, a.project-actions, nav {
+a.button, a.button:before, #nav-menu-opener, .icon, a.project-actions, input.project-actions:before, nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -185,7 +185,7 @@ a.button, a.button:before, #nav-menu-opener, .icon, a.project-actions, nav {
           align-items: center;
 }
 
-a.button, a.button:before, #nav-menu-opener, .icon, a.project-actions {
+a.button, a.button:before, #nav-menu-opener, .icon, a.project-actions, input.project-actions:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2121,5 +2121,22 @@ a.project-actions {
 
 .project-tile input:checked ~ .project-tile-footer {
   height: 20em;
+}
+
+input.project-actions {
+  z-index: 2;
+  border-radius: 50% !important;
+}
+
+input.project-actions:checked:before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+input.project-actions:before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
 }
 /*# sourceMappingURL=index.css.map */
