--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -8,9 +8,8 @@ html
         font-size: $html-font-size * 2
 
 body
-    font-family: 'Quicksand', sans-serif
-    font-weight: normal
-    // overflow-x: hidden
+    font-family: $body-font-family
+    font-weight: $body-font-weight
 
 li, p, pre
         line-height: $line-height
