--- a/personalPortfolio/css/_variables.sass
+++ b/personalPortfolio/css/_variables.sass
@@ -4,4 +4,11 @@ $goldens: (12, 16, 21, 28, 37, 50, 67, 89, 119)
 $goldens-map: create-var-dynamically-using-map($goldens, "golden")
 
 $nav-bar-height: map-get($goldens-map, 'golden119')
-  
+
+$google-font: 'Quicksand'
+$google-font-link: 'Quicksand'
+
+// Ubuntu, Bitter, Open Sans, Josefin Sans, Indie Flower
+
+$body-font-family: $google-font, sans-serif
+$body-font-weight: normal
