--- a/personalPortfolio/css/index.sass
+++ b/personalPortfolio/css/index.sass
@@ -21,7 +21,9 @@
 
 @import 'layout'
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,700')
+@import url('https://fonts.googleapis.com/css?family=#{$google-font-link}:300,400,700')
 @import 'material_design_icons'
 
 @import 'challenge/index'
+
+@import 'media/print'
