--- a/personalPortfolio/css/challenge/_tile.sass
+++ b/personalPortfolio/css/challenge/_tile.sass
@@ -50,11 +50,33 @@ $padding-tile-footer-content: 2 * $button-size
     background: trasparent
     font-size: 1rem
     z-index: 4
-    & > a
-        background: white
+    .tile-action
         border-radius: 50%
         padding: 1em
         margin: 0 1em 1em
         cursor: pointer
-        color: black
         @extend %centralize-all
+
+.tile-action-expand.activated
+    transform: rotate(180deg)
+.tile-action-expand:hover:before, .tile-action-expand:focus:before
+    animation: 1s ease-in-out expand infinite
+
+.tile-action-open:hover:before, .tile-action-open:focus:before
+    animation: 1s ease-in-out open infinite
+
+@keyframes expand
+    0%
+        transform: translateY(0)
+    50%
+        transform: translateY(-1em)
+    100%
+        transform: translateY(0)
+
+@keyframes open
+    0%
+        transform: scale(1.0)
+    50%
+        transform: scale(1.5)
+    100%
+        transform: scale(1.0)
